2010-06-20  Joseph Pecoraro  <joepeck@webkit.org>

        Reviewed by Dimitri Glazkov.

        Python Tests Fail after r61508
        https://bugs.webkit.org/show_bug.cgi?id=40891

        Test's regex list needed to be updated to match the new
        regex list in the source code. Added new bots to the
        example_buildbots list.

        Regex list fixed in r61512. Updated bot list.

        * Scripts/webkitpy/common/net/buildbot_unittest.py:

2010-06-20  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, build fix.

        Tweak test regexp list to match the change in http://trac.webkit.org/changeset/61508.

        * Scripts/webkitpy/common/net/buildbot_unittest.py: Tweaked regexp.

2010-06-19  Justin Schuh  <jschuh@chromium.org>

        Unreviewed.

        Adding myself to the committers list.

        * Scripts/webkitpy/common/config/committers.py:

2010-06-19  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=40882
        Add ability to have a WebProcess per WebContext.

        Move to use new shared contexts API.

        * MiniBrowser/mac/AppDelegate.h:
        * MiniBrowser/mac/AppDelegate.m:
        (-[BrowserAppDelegate init]):
        (-[BrowserAppDelegate getCurrentPageNamespace]):
        (-[BrowserAppDelegate validateMenuItem:]):
        (-[BrowserAppDelegate _setProcessModel:]):
        (-[BrowserAppDelegate setSharedProcessProcessModel:]):
        (-[BrowserAppDelegate setSharedThreadProcessModel:]):
        * MiniBrowser/win/BrowserView.cpp:
        (BrowserView::create):

2010-06-02  Robert Hogan  <robert@webkit.org>

        Reviewed by Adam Barth.

        [Qt] Support evaluateScriptInIsolatedWorld()

        https://bugs.webkit.org/show_bug.cgi?id=40079

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::evaluateScriptInIsolatedWorld):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:
