@@ -1,5 +1,15 @@
 2010-06-20  Joseph Pecoraro  <joepeck@webkit.org>
 
+        Reviewed by Adam Barth.
+
+        Sheriffbot: Should allow "r" in SVN_REVISION
+        https://bugs.webkit.org/show_bug.cgi?id=40889
+
+        * Scripts/webkitpy/tool/bot/irc_command.py: remove a leading "r" from SVN_REVISION if it exists
+        * Scripts/webkitpy/tool/bot/sheriffircbot_unittest.py: test an SVN_REVISION with a leading r.
+
+2010-06-20  Joseph Pecoraro  <joepeck@webkit.org>
+
         Reviewed by Dimitri Glazkov.
 
         Python Tests Fail after r61508
